--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,12 +7,12 @@ footer {
     padding: 10px 15px;
     flex-shrink: 0;
     width: 100%;
-    position: relative; 
+    position: relative;
     bottom: 0;
 }
 
 footer p {
-    color: #fff;
+    color: #ffffff;;
     margin: 0;
     margin-left: auto;
     padding: 0;
