--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,7 @@ header {
 }
 
 header h1 {
-    color: #fff;
+    color: #ffffff;;
     margin: 0;
     padding: 0;
 }
